--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Customize scrollbar */
+*::-webkit-scrollbar {
+  width: 5px !important;
+}
+*::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: silver;
+  border-radius: 20px;
+}
